adding RestTemplate